2008-04-17  Mike Kestner  <mkestner@novell.com>

	* glib/ToggleRef.cs: Add a Harden method to switch to a standard
	ref and just leak it.
	* gtk/Application.cs: revert the QuitPrepare stuff since it didn't
	always work.

2008-04-17  Mike Kestner  <mkestner@novell.com>

	* gtk/TreeModelAdapter.custom:
	* gtk/TreeModelFilter.custom:
	* gtk/TreeModelSort.custom: reworked patch from Christian Hoff to
	throw NotImplementedException for SetValue methods.  Those should 
	never have been added to the interface, and it's better to throw
	an exception than have infinite recursion kill the program.
	[Fixes #379542]

2008-04-16  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata: hide PrintContext.get_CairoContext.
	* gtk/PrintContext.custom: manual get_cairo_context implementation.
	Mono.Cairo assumes it is wrapping owned references, so we need to 
	take a ref out on the returned cairo_t pointer.
	* sample/GtkDemo/DemoPrinting.cs: dispose the CairoContext in
	to be a good citizen and avoid warnings.

2008-04-15  Mike Kestner  <mkestner@novell.com>

	* generator/ReturnValue.cs: use new GLib.Opaque.OwnedCopy for owned
	opaque return values.
	* glib/Opaque.cs: introduce OwnedCopy property to support returning
	owned opaque instances from native to managed callbacks. 
	[Fixes #374641]

2008-04-15  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata: hide GtkKey_ for manual impl.
	* gtk/Key.cs: manual implementation to manage delegate wrapper
	persistence.  [Fixes #378989]

2008-04-15  Mike Kestner  <mkestner@novell.com>

	* gtk/FileSystemModel.custom: remove dead file. 

2008-04-15  Mike Kestner  <mkestner@novell.com>

	* glib/Marshaller.cs: marshal null string arrays as a null IntPtr[].
	[Fixes #378514]

2008-04-14  Mike Kestner  <mkestner@novell.com>

	* gtk/Application.cs: add QuitPrepare event for Gnome.Program usage.

2008-04-08  Marek Habersack  <mhabersack@novell.com>

	* generator/InterfaceGen.cs: added a check for null obj in the
	generated GetObject method.
