@@ -1,5 +1,10 @@
 2008-04-17  Mike Kestner  <mkestner@novell.com>
 
+	* glib/Object.cs: add Harden method to reduce the reflection 
+	overhead in Gnome.Program.
+
+2008-04-17  Mike Kestner  <mkestner@novell.com>
+
 	* glib/ToggleRef.cs: Add a Harden method to switch to a standard
 	ref and just leak it.
 	* gtk/Application.cs: revert the QuitPrepare stuff since it didn't
